// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - default - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "className": "{}",
      "id": "default",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.icon - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.icon - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            icon="AiOutlineSave"
            id="properties.list.icon_0"
            label="label 1"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            icon="AiOutlineDelete"
            id="properties.list.icon_1"
            label="label 2"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.icon",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.icon with onClick - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.icon with onClick - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          onClick={[Function]}
        >
          <Link
            className="{\\"style\\":[{\\"cursor\\":\\"pointer\\"},null]}"
            icon="AiOutlineSave"
            id="properties.list.icon with onClick_0"
            label="label 1"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor
          onClick={[Function]}
        >
          <Link
            className="{\\"style\\":[{\\"cursor\\":\\"pointer\\"},null]}"
            icon="AiOutlineDelete"
            id="properties.list.icon with onClick_1"
            label="label 2"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.icon with onClick",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.label strings - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.label strings - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            0="P"
            1="a"
            2="g"
            3="e"
            4=" "
            5="O"
            6="n"
            7="e"
            className="{\\"style\\":[{},null]}"
            id="properties.list.label strings_0"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            0="P"
            1="a"
            2="g"
            3="e"
            4=" "
            5="t"
            6="w"
            7="o"
            className="{\\"style\\":[{},null]}"
            id="properties.list.label strings_1"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.label strings",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.pageId - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.pageId - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId_0"
            pageId="page1"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId_1"
            pageId="page2"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.pageId",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.pageId label and url - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.pageId label and url - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId label and url_0"
            pageId="page1"
            url="https://www.url.com"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId label and url_1"
            label="label url"
            url="https://www.url.com"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId label and url_2"
            label="label pageId"
            pageId="page2"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId label and url_3"
            pageId="page3"
            url="https://docs.url.com"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.pageId label and url_4"
            label="label4"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.pageId label and url",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.style - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.style - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},{\\"color\\":\\"blue\\"}]}"
            id="properties.list.style_0"
            label="Page One"
            style={
              Object {
                "color": "blue",
              }
            }
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},{\\"color\\":\\"red\\"}]}"
            id="properties.list.style_1"
            label="Page two"
            style={
              Object {
                "color": "red",
              }
            }
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.style",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.url - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.list.url - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.url_0"
            url="https://www.url.com"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.list.url_1"
            url="https://docs.url.com"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.list.url",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.separator - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.separator - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.separator_0"
            label="Page One"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.separator_1"
            label="Page two"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{}",
      "id": "properties.separator",
      "separator": "->",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style: fontSize: 18 - value[0] - Breadcrumb 1`] = `mocked`;

exports[`Mock render - properties.style: fontSize: 18 - value[0] - Breadcrumb 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.style: fontSize: 18_0"
            label="Page One"
          >
            [Function]
          </Link>
        </mockConstructor>,
        <mockConstructor>
          <Link
            className="{\\"style\\":[{},null]}"
            id="properties.style: fontSize: 18_1"
            label="Page two"
          >
            [Function]
          </Link>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":{\\"fontSize\\":18}}",
      "id": "properties.style: fontSize: 18",
      "separator": undefined,
    },
    Object {},
  ],
]
`;
